@@ -1,3 +1,14 @@
+2021-05-23  Mark Lam  <mark.lam@apple.com>
+
+        Build fix for JSCOnly-Linux-AArch64 bot.
+
+        Not reviewed.
+
+        * wtf/Vector.h:
+        (WTF::Malloc>::expandCapacity):
+        (WTF::Malloc>::reserveCapacity):
+        (WTF::Malloc>::constructAndAppendSlowCase):
+
 2021-05-22  Chris Dumez  <cdumez@apple.com>
 
         Adopt CheckedLock in more places
